--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/
+.idea/workspace.xml
+.idea/misc.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -36,3 +39,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/.idea/
+/.allure/
